[package]
name = "rdcache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustis = "0.13.3"
tokio = { version = "1", features = ["full"] }
sha1 = "0.10.6"
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.3.0"
uuid = { version = "1.10.0", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }
chrono = "0.4.38"

